sigsum: defaults: Reorder and document better

--- a/roles/sigsum/defaults/main.yml
+++ b/roles/sigsum/defaults/main.yml
@@ -1,28 +1,70 @@
 ---
 sigsum_user: sigsum
 sigsum_home: "/var/sigsum/{{ sigsum_user }}"
+sigsum_role: "primary"  # must be "primary" or "secondary"
 
-sigsum_logname: sigsum
-sigsum_role: "primary"
-sigsum_secondary_pubkey: ""
-sigsum_witness_config: ""
+# The Ed25519 private-key of the log server.  Can either be an unencrypted
+# OpenSSH private-key, or an OpenSSH public-key.  If it is a public key, the
+# private key must be accessible when using the ssh-agent protocol.
+#
+# A fresh key is generated and stored on disk for subsequent use if omitted.
 sigsum_key: ""
 
-# For sigsum_db_pw, create a '!vault' blob by running the following
-# command and put the result it in a host_vars/ file. To avoid a newline
-# in the value, press C-d twice.
+# The Ed25519 public key of the secondary log server in OpenSSH format.  Will be
+# ignored unless sigsum_role == "primary".  In other words, if you are confuring
+# the key with sigsum_role == "secondary" the appropriate option is sigsum_key.
+sigsum_secondary_pubkey: ""
+
+# The witnesses that should be recognized by the primary log server in Sigsum
+# policy-file format.  Below is an example configuration to get you started.
+#
+#    witness example.org/foo e833b2909b71b461773421c77884d85243bf0cd872e9152a923dc67a747a33d8 https://foo.org/witness
+#    witness example.org/bar 52ea04b111556d962e2d16e692f9fa264a208e540694a85902cf853e5dda97ac https://example.org/bar/witnessops
+#    quorum none
+#
+# Note that the first identifier is a *human-meaningful name* that you can set
+# arbitrarily.  Using the witness' self-proclaimed URL-style identifier is
+# however a best practise.  The public Ed25519 key is in hex format.  The final
+# URL is where the witness serves its publicly reachable endpoints.
+#
+# Read more:
+# https://git.glasklar.is/sigsum/core/sigsum-go/-/blob/main/doc/policy.md
+#
+sigsum_witness_config: ""
+
+# This option only affects file paths on the local system.  To set a log name
+# that is externally visible, serve the log on a domain like example.org, and
+# optionally set `sigsum_url_prefix` to extend the log's base URL with a path.
+#
+# TODO: this option is confusing and should likely not be here.
+sigsum_logname: sigsum
+
+################################################################################
+#                            Database configuration                            #
+################################################################################
+#
+# For sigsum_db_pw, create a '!vault' blob by running the following command and
+# put the result it in a host_vars/ file. To avoid a newline in the value, press
+# C-d twice.
+#
 #   ansible-vault encrypt_string --vault-id host@/etc/vault/$(hostname -s)_vault_secret
 #
-# WARNING: The unencrypted value will end up in a world readable file
-# on the target system.
+# WARNING: The unencrypted value will end up in a world readable file on the
+# target system.
 #
 sigsum_db_pw: changeme
 sigsum_db_name: test
 
+################################################################################
+#                   Tune which Go dependencies are installed                   #
+################################################################################
 #
 # The default Go module source and version can be overriden by setting "source"
 # and "version".  For example, sigsum-key could be installed with this syntax:
 # - { name: "sigsum-key", source: "sigsum.org/sigsum-go", version: "v0.6.1" }
+#
+# Note: the listed tools are required for the sigsum role to function.  So,
+# ensure to only extend the list of tools if you override the defaults.
 #
 sigsum_lib_version: "v0.6.1"  # default version for tools from sigsum-go
 sigsum_tools_from_sigsum_go:
@@ -40,12 +82,27 @@ sigsum_tools_from_trillian_go:
   - { name: "trillian_log_signer" }
   - { name: "trillian_log_server" }
 
+################################################################################
+#                        Configure Trillian options                            #
+################################################################################
+#
+# How many leaves can be sequenced per time unit is capped by the below options.
+# A 100ms interval and a batch size of 100 results in at most 1000 leaves/s.
+#
+# Read more:
+# https://www.rgdd.se/post/trillian-log-sequencing-demystified/
+#
 sigsum_trillian_sequencer_interval: 100ms
 sigsum_trillian_batch_size: 100
 
-###
-# Tune command-line options that are passed to the Sigsum log server.
-###
+################################################################################
+#                   Configure Sigsum log server options                        #
+################################################################################
+#
+# Read more:
+# https://git.glasklar.is/sigsum/core/log-go/-/blob/main/doc/setup.md#primary-node
+# https://git.glasklar.is/sigsum/core/log-go/-/blob/main/doc/setup.md#secondary-node
+#
 sigsum_url_prefix: sigsum  # would result in log URL example.org/sigsum
 sigsum_timeout: 10s  # timeout for ongoing requests
 sigsum_interval: 30s  # how often the log updates its (co)signed tree head
@@ -58,7 +115,7 @@ sigsum_backend: "trillian"
 sigsum_trillian_tree_id_file: ""
 sigsum_key_file: ""
 
-# Options that are ignored unless sigsum_role == "primary"
+# Ignored unless sigsum_role == "primary"
 sigsum_policy_file: ""
 sigsum_rate_limit_file: ""
 sigsum_allow_test_domain: false
@@ -67,5 +124,5 @@ sigsum_secondary_pubkey_file: ""
 sigsum_sth_file: ""
 sigsum_max_range: 4096
 
-# Options that are ignored unless sigsum_role == "secondary"
+# Ignored unless sigsum_role == "secondary"
 sigsum_primary_url: ""
