sigsum: Move start script to templates
So we can do conditionals based on if we have ssh-agent config.

--- a/roles/sigsum/tasks/main.yml
+++ b/roles/sigsum/tasks/main.yml
@@ -44,8 +44,8 @@
 # Install scripts
 ###
 - name: Install sigsum-log start-up script
-  copy:
-    src: sigsum-log-start.sh
+  template:
+    src: sigsum-log-start.sh.j2
     dest: "{{ sigsum_home }}/.local/bin/sigsum-log-start.sh"
     owner: "{{ sigsum_user }}"
     group: "{{ sigsum_user }}"
