Add option to tune Trillian's log verbosity
It is a bit confusing how the flag names and values interact.  But from
trial-and-error, it seems the two Trillian settings result in "don't
give me any logging on stderr *unless* it concerns LEVEL or higher".

This commit sets WARNING as the default.

--- a/roles/sigsum/defaults/main.yml
+++ b/roles/sigsum/defaults/main.yml
@@ -99,6 +99,10 @@ sigsum_tools_from_trillian_go:
 sigsum_trillian_sequencer_interval: 100ms
 sigsum_trillian_batch_size: 100
 
+# The supported verbosity levels are "INFO", "WARNING", "ERROR", and "FATAL".
+# Note that the "INFO" level is very noisy and more similar to debug logging.
+sigsum_trillian_verbosity: "WARNING"
+
 ################################################################################
 #                   Configure Sigsum log server options                        #
 ################################################################################
