--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,10 +4,13 @@ dependency:
 driver:
   name: podman
 platforms:
+  ####
+  # With database replication
+  ###
   - name: sigsum-primary
     image: docker.io/library/debian:bookworm
     dockerfile: ../Dockerfile.debian.bookworm.j2
-    privileged: true 
+    privileged: true
     cgroupns_mode: private
     override_command: false
     volume_mounts:
@@ -16,6 +19,23 @@ platforms:
       - /run
       - /run/lock
       - /tmp
+    network: internal-testnet
+  - name: sigsum-secondary
+    image: docker.io/library/debian:bookworm
+    dockerfile: ../Dockerfile.debian.bookworm.j2
+    privileged: true
+    cgroupns_mode: private
+    override_command: false
+    volume_mounts:
+       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+    tmpfs:
+      - /run
+      - /run/lock
+      - /tmp
+    network: internal-testnet
+  ####
+  # With key accessed using ssh-agent
+  ####
   - name: sigsum-primary-ssh-agent
     image: docker.io/library/debian:bookworm
     dockerfile: ../Dockerfile.debian.bookworm.j2
