Add more debug tools

--- a/molecule/common/prepare_debian.yml
+++ b/molecule/common/prepare_debian.yml
@@ -21,4 +21,8 @@
         - less
         - vim
         - curl
+        - iproute2
+        - ldnsutils
+        - iputils-ping
+        - netcat-traditional
       state: present
